Fix vue-agent-311 overflow and pattern-lab viewall issues

--- a/source/css/pl-scss/patternlab.scss
+++ b/source/css/pl-scss/patternlab.scss
@@ -856,6 +856,20 @@ $pl-size-box-wrapper-padding: 1rem;
   }
 }
 
+// View all don't have body class...
+// Hack for VDL311
+[id^='templates-employes-vue-agent-311'] {
+  min-height: calc(100vh -72px);
+  .sg-pattern-example {
+    position: relative;
+    .main-content {
+      min-height: calc(100vh - 72px);
+    }
+  }
+}
+
+
+
 // Margin and Padding
 
 @each $breakpoint in map-keys($grid-breakpoints) {
